<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/LabelVarX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="128dp"
        android:text="@string/n_mero_x"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewX"
        android:layout_width="22dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/LabelVarX"
        app:layout_constraintTop_toBottomOf="@+id/buttsetVarX"
        tools:text="@string/x" />

    <TextView
        android:id="@+id/LabelVarY"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/n_mero_y"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelVarX" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="22dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/LabelVarY"
        app:layout_constraintTop_toBottomOf="@+id/buttsetVarY"
        tools:text="@string/y" />

    <TextView
        android:id="@+id/LabelSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="108dp"
        android:text="@string/soma"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Labelresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:textSize="20sp"
        tools:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="@+id/LabelSoma"
        app:layout_constraintStart_toEndOf="@+id/LabelSoma"
        app:layout_constraintTop_toTopOf="@+id/LabelSoma"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttsetVarX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="36dp"
        android:text="@string/set_vari_vel_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttsetVarY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:text="@string/set_vari_vel_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttsetVarX" />

    <Button
        android:id="@+id/buttCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>